# transparentnlp

./: .gitignore  Analysis_Evaluation_DataProcessingQA.ipynb  License.rtf  README.md  calulate_average.py  configs.py  data_loader.py  data_processing.py  evaluate_average_openai.py  plot_statistical_threshold.py  pyproject.toml  requirements.txt  statistical_evaluation.py  threshold_llm_metrics.py  threshold_statistical_metrics.py
.ipynb_checkpoints/: data_processor-checkpoint.py  openai_evaluation-checkpoint.py
PCA/: PCA_Loadings_for_Normalized_Metrics.tsv  compute_PCA.py  reshaped_metrics_scores_with_answer_type.tsv
calculate_percentages_at_least_as_good_as_human/: Analysis_Evaluation_DataProcessingQA.ipynb  Evaluation_DataProcessingQA.ipynb  PrivacyQA_Evaluation_Designed_Answer_1_20240730_144528.csv  PrivacyQA_Evaluation_Designed_Answer_1_20241008_134934.csv  PrivacyQA_Evaluation_Designed_Answer_2_20240730_144757.csv  PrivacyQA_Evaluation_Designed_Answer_2_20241008_135028.csv  PrivacyQA_Evaluation_RAG+MultiRAIN_Readability+Correctness_20241008_135403.csv  PrivacyQA_Evaluation_RAG+RAIN_Correctness_20241008_135308.csv  PrivacyQA_Evaluation_RAG+RAIN_Readability_20241008_135213.csv  PrivacyQA_Evaluation_Rag_Rain_dishon_20240730_145626.csv  PrivacyQA_Evaluation_VanillaRAG_20241008_135126.csv  privacyQA_multiRain_examples.csv
correctness_readability/: Analysis_Evaluation_DataProcessingQA.py  Evaluation_DataProcessingQA.py  PrivacyQA_Evaluation_Designed_Answer_1_20241028_130911.csv  PrivacyQA_Evaluation_Designed_Answer_2_20241028_131134.csv  (+5 more)
data/: PrivacyQA.xlsx  (+11 more)
(+76 files in other folders)
