[tool.poetry]
name = "offline privacyQA evaluation"
version = "0.1.0"
description = "collection of metrics to evaluate privacyQA in an offline mode"
authors = ["Zahra Kolagar <zahra.kolagar@iis.fraunhofer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "3.6.6"
rouge-score = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
